--- a/my-app4/package.json
+++ b/my-app4/package.json
@@ -8,9 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chroma-js": "^3.1.2",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-color": "^2.19.3",
-    "react-dom": "^19.1.0",
+    "react-colorful": "^5.6.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
